# braiNNlet

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mnist_network.cfg
src/app/: gui_main.cpp  main.cpp
src/cli/: main.cpp
src/cli/commands/: create_command.cpp  create_command.hpp  data_command.cpp  data_command.hpp  eval_command.cpp  eval_command.hpp  train_command.cpp  train_command.hpp
src/cli/interfaces/: interactive_mode.cpp  interactive_mode.hpp
src/cli/utils/: cli_utils.cpp  cli_utils.hpp  config_manager.cpp  config_manager.hpp
src/core/data/: Dataset.cpp  Dataset.hpp  MnistLoader.cpp  MnistLoader.hpp
src/core/nn/: Activations.cpp  Activations.hpp  DenseLayer.cpp  DenseLayer.hpp  Layer.cpp  Layer.hpp  Loss.cpp  Loss.hpp  Network.cpp  Network.hpp  Tensor.cpp  Tensor.hpp  activations.cpp  activations.hpp  dense_layer.cpp  dense_layer.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  tensor.cpp  tensor.hpp
src/core/training/: Trainer.cpp  Trainer.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  PlotWidget.cpp  PlotWidget.hpp
tests/: CMakeLists.txt  activations.test.cpp  dense_layer.test.cpp  integration.test.cpp  loss.test.cpp  main.test.cpp  tensor.test.cpp  test.cpp  test_activations.cpp  test_backpropagation.cpp  test_dense_layer.cpp  test_loss.cpp  test_main.cpp  test_tensor.cpp
